<resources>

    <!-- system -->
    <string name="default_notification_channel_id">알림 설정</string>
    <string name="default_topic_channel_id">데일리 토픽</string>
    <string name="no_internet">네트워크 연결 상태를 확인해주세요.</string>
    <string name="confirm">확인</string>
    <string name="suggest_permission_grant_in_app">비행기를 날리시려면\n위치정보 접근 권한을 허용해주세요!</string>
    <string name="suggest_permission_grant_in_setting">비행기를 날리시려면\n위치정보 접근 권한을 허용해주세요!\n[설정 -> 개인정보 보호 탭 -> 권한]</string>
    <!-- splash -->
    <string name="subtitle_splash">우리끼리 날리는 종이비행기</string>
    <string name="congrats_splash">가입이 완료되었습니다!\n비행기를 날려보세요!</string>
    <!-- menu -->
    <string name="user_info">개인정보</string>
    <string name="birth_year">태어나신 해</string>
    <!-- replied paper dialog-->
    <string name="no">아니요</string>
    <string name="start">네, 대화 나눠볼래요!</string>
    <!-- my page -->
    <string name="setting">설정</string>
    <string name="guide">PAPLE 사용법</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="version_title">버전 정보</string>
    <string name="version_latest">최신버전 : %1$s</string>
    <string name="version_current">%1$s</string>
    <string name="log_out">로그아웃</string>
    <string name="setting_notification">알림 설정하기</string>
    <string name="sign_out">탈퇴하기</string>
    <string name="daily_topic">데일리 토픽</string>
    <string name="description_setting_topic">매일매일 토픽 비행기가 날아와요.</string>
    <string name="description_setting_notification">비행기와 메시지가 오면 알림이 울려요.</string>
    <!-- sign_out -->
    <string name="title_sign_out">정말 탈퇴 하시겠어요..?</string>
    <string name="content_sign_out">%1$s님과 이별한다니 정말 아쉬워요..\n계정 탈퇴를 하면 서비스 내의 모든 정보가 삭제됩니다.</string>
    <string name="title_reason_sign_out">탈퇴 사유</string>
    <string name="hint_reason_sign_out">떠나시려는 사유를 말씀 해주시겠어요?\n서비스가 발전하는데 큰 도움이 됩니다.</string>
    <string name="confirm_sign_out">탈퇴할래요</string>
    <string name="success_sign_out">탈퇴하셨습니다.</string>
    <!-- guide -->
    <string name="title_guide">처음 오셨군요!</string>
    <string name="subtitle_guide">페플을 시작하시기 전에\n몇 가지를 안내해 드릴게요.\n하단의 버튼을 누르시면 페플을 시작합니다.</string>
    <string name="rule_1_title_guide">신고당한 회원은 관리자의 검토 후\n활동이 부적절하다 판단되면 다시는 활동할 수 없어요!</string>
    <string name="rule_1_body_guide">폭언, 욕설, 성희롱 등 부적절한 언어 사용을 목격하실 경우,\n즉시 신고해주세요! 관리자가 확인하여, 경고를 드리거나 계정을 무기한 정지시킵니다.</string>
    <string name="rule_2_title_guide">종이비행기를 날리면 내 주변 가장 가까운 페플 사용자에게 비행기가 도달합니다.</string>
    <string name="rule_2_body_guide">비행기를 한 번씩 주고 받으면 먼저 비행기를 날린 사용자가 대화를 시작할 수 있어요.</string>
    <string name="rule_3_title_guide">상대방과의 거리가 대화 시작 전에만 알려질 뿐, 구체적인 위치 등의 개인 정보는 노출되지 않아요.</string>
    <string name="rule_3_body_guide">다른 사용자와 비행기를 주고받을 때에 두 사람 간의 거리가 공개되오니 섣불리 개인 정보를 묻거나 알리지 않는 것이 좋습니다.</string>
    <string name="confirm_guide">확인했어요!</string>
    <!-- sign_in_activity -->
    <string name="hint_enter_number">전화번호를 입력해주세요</string>
    <string name="send_otp">인증코드 요청하기</string>
    <string name="login_otp">인증코드 요청</string>
    <string name="phone_auth_title">전화번호 인증하기</string>
    <string name="phone_auth_info">건전한 환경을 위해\n청소년 보호법을 준수하여 SMS 인증을 시행하고 있어요!\n전화번호는 사용자 인증 및 로그인 용도로만 사용됩니다.</string>

    <!-- otp_activity -->
    <string name="otp_title">인증번호를 보냈어요!</string>
    <string name="otp_subtitle">잠시 후 휴대전화로 인증번호가 도착합니다 :)</string>
    <string name="hint_otp">인증 번호</string>
    <string name="otp_check">인증 번호 확인</string>
    <string name="otp_time">%1$d초 내 입력</string>
    <string name="otp_resend">다시 요청하기</string>
    <string name="otp_body_no_otp">인증 번호가 오지 않아요</string>
    <string name="otp_failure">인증 요청이 만료되었습니다. 다시 요청해주세요.</string>
    <!-- splash_congrats_activity -->
    <string name="splash_congrats">초 후 메인홈으로 이동</string>

    <!-- initial_setup_activity -->
    <string name="initial_title">프로필 입력</string>
    <string name="initial_guidance">닉네임을 제외한 개인정보는 노출되지 않아요.\n개인정보는 안전하게 보관되며, 동의없이 무단으로 활용되지 않습니다.</string>
    <string name="initial_nickname">닉네임</string>
    <string name="initial_start">시작하기</string>
    <!-- HomeFragment -->
    <string name="location_update">위치정보 업데이트</string>
    <string name="send_paper">비행기를 날릴래요!</string>
    <string name="advice_home_write">내 이야기를 들어줄 사람이 필요한데\n옆에 아무도 없을 때,\n\n털어놓고 싶은 이야기가 있는데\n지인에게는 할 수 없을 때,\n\n종이비행기에 적어 날려보세요.</string>
    <string name="delete_all_records">전체기록지우기</string>
    <string name="title">PAPLE</string>
    <string name="app_name">PAPLE</string>
    <string name="save">저장하기</string>
    <string name="user_birth_year">태어난 해</string>
    <string name="user_gender">성별</string>
    <string name="gender_male">남성</string>
    <string name="gender_female">여성</string>
    <string name="home">HOME</string>
    <string name="chat">Chat</string>
    <string name="myPage_title">님, 안녕하세요</string>
    <string name="next">다음</string>
    <string name="start_dialog_replied">채팅을 시작하시겠습니까?</string>
    <string name="my_page">My PAGE</string>
    <string name="flight_distance">%1$sm 거리의 유저에게 도달했어요 :)</string>
    <string name="first_plane">새로운 비행기</string>
    <string name="first_plane_dialog">%1$s 거리에서\n비행기가 날아왔어요!</string>
    <string name="discard_paper">비행기 버리기</string>
    <string name="replied_plane_dialog">%1$s 거리에서\n답장이 날아왔어요!</string>
    <string name="returned_plane">비행기 답장이 왔어요!</string>
    <string name="open_chat">열린 대화</string>
    <string name="tip_replied_paper">비행기 답장을 열면 대화창을 열 수 있어요!</string>
    <string name="notice_no_paper">아직 날아온 비행기가 없어요.</string>
    <string name="chatting">채팅</string>
    <string name="meter">m</string>
    <string name="distance">%1$sm</string>
    <string name="km">km</string>
    <string name="flight_distance_home">%1$sm 비행합니다</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_home">다 적은 후에 종이비행기를 눌러주세요!</string>
    <string name="limit_write">0/200</string>
    <string name="flight_success">비행기가 잘 날아갔어요✈</string>
    <string name="flight_result">%1$s 거리의 누군가에게\n비행기가 날아갔어요</string>
    <string name="flight_result_untargeted">비행기를 받은 사람이 답장 비행기를 날리면 대화를 시작할 수 있어요 :)</string>
    <string name="sent_paper">보낸 비행기</string>
    <string name="loading_flying">비행 중...✈</string>
    <string name="wait">잠시만 기다려주세요! 비행기가 날아가고 있어요 :)</string>
    <string name="update_address">위치 정보 업데이트하기</string>
    <!-- Chat Log Bottom Sheet -->
    <string name="finish_bottom_sheet">채팅방 나가기</string>
    <string name="report_bottom_sheet">신고하기</string>
    <string name="cancel_bottom_sheet">취소</string>
    <!-- firebase messaging service-->
    <string name="topic_notification_title">데일리 토픽이 날아왔어요!</string>

    <string name="flight_reply_result">%1$s 거리의 상대에게\n답장 비행기를 날렸어요!\n이제 상대방이 대화를 신청할 수 있어요:)</string>
    <string name="flight_reply_result_untargeted">답장이 성공적으로 날아갔어요!\n상대방이 채팅방을 열면 대화할 수 있어요.</string>
    <string name="init_chat_log">대화가 시작되었습니다.</string>
    <string name="finish_chat_log">상대방이 대화를 종료했습니다.</string>
    <string name="report_title">정말 신고하시겠습니까?</string>
    <string name="success_report">성공적으로 신고 처리되었습니다.</string>
    <string name="btn_login">로그인</string>
    <string name="reported_chatroom">신고처리된 채팅방입니다.</string>
    <string name="report_guidance">지금 보고 계신 채팅 메시지의 스크린샷이 관리자에게 전송되고, 상대 유저는 차단됩니다.</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
</resources>