<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_chat_log"
    android:layout_height="match_parent"
    tools:context=".GuideActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:layout_marginTop="16dp"
            android:text="@string/title_guide"
            android:textColor="@color/paperplane_theme"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle_guide"
            style="@style/guide_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/subtitle_guide"
            android:textColor="@color/black3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_guide" />

        <ImageView
            android:id="@+id/iv_paple_illustration"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/tv_rule_1_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_subtitle_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_guide" />

        <TextView
            android:id="@+id/tv_rule_1_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:background="@drawable/bg_guide_round_box"
            android:text="@string/rule_1_title_guide"
            style="@style/guide_body"
            android:textStyle="bold"
            android:textColor="@color/paperplane_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_guide" />

        <TextView
            android:id="@+id/tv_rule_1_body"
            style="@style/guide_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/rule_1_body_guide"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rule_1_title" />

        <TextView
            android:id="@+id/tv_rule_2_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_guide_round_box"
            android:text="@string/rule_2_title_guide"
            style="@style/guide_body"
            android:textStyle="bold"
            android:textColor="@color/paperplane_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rule_1_body" />

        <TextView
            android:id="@+id/tv_rule_2_body"
            style="@style/guide_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/rule_2_body_guide"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rule_2_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_guide_confirm"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/selector_confirm"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/confirm_guide"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>