<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".SettingActivity">

    <ImageView
        android:id="@+id/iv_back_setting_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_setting_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_sans_cjk_kr_regular"
        android:includeFontPadding="false"
        android:letterSpacing="-0.03"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back_setting_activity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_notification_setting"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_my_page"
        android:fontFamily="@font/noto_sans_cjk_kr_regular"
        android:includeFontPadding="false"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_setting_activity">

        <TextView
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:includeFontPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_notification"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sb_toggle_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbTint="@color/white"
            app:track="@drawable/switch_track_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:includeFontPadding="false"
            android:text="@string/description_setting_notification"
            android:textColor="@color/inactive_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_subscription_setting"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/bg_my_page"
        android:fontFamily="@font/noto_sans_cjk_kr_regular"
        android:includeFontPadding="false"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/cl_notification_setting">

        <TextView
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:includeFontPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_topic"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sb_toggle_subscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbTint="@color/white"
            app:track="@drawable/switch_track_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:includeFontPadding="false"
            android:text="@string/description_setting_topic"
            android:textColor="@color/inactive_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_sign_out_setting"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/bg_my_page"
        android:fontFamily="@font/noto_sans_cjk_kr_regular"
        android:includeFontPadding="false"
        android:paddingVertical="20dp"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/cl_subscription_setting" />

</androidx.constraintlayout.widget.ConstraintLayout>