<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_first_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_chat_box"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_finish_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="24sp"
            android:text="@string/finish_bottom_sheet"
            android:textColor="@color/warning"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            app:layout_constraintTop_toBottomOf="@id/tv_finish_bottom_sheet" />

        <TextView
            android:id="@+id/tv_report_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="24sp"
            android:text="@string/report_bottom_sheet"
            android:textColor="@color/black1"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_finish_bottom_sheet" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner_chat_box"
        android:fontFamily="@font/noto_sans_cjk_kr_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="24dp"
        android:text="@string/cancel_bottom_sheet"
        android:textColor="@color/txt_gray"
        app:layout_constraintTop_toBottomOf="@id/cl_first_bottom_sheet" />


</androidx.constraintlayout.widget.ConstraintLayout>